# cgl

./: CMakeLists.txt
lib/: cgl.h
lib/cgl/: common.h  ebo.c  ebo.h  error.c  error.h  image.c  image.h  object.c  object.h  shader.c  shader.h  shader_program.c  shader_program.h  texture2D.c  texture2D.h  types.h  vao.c  vao.h  vbo.c  vbo.h
test/: cgl_learnopengl.c  learnopengl.c  learnopengl2.c
test/glsl/: ShaderProgramFragmentShader.glsl  ShaderProgramVertexShader.glsl  learnopenglFragmentShader.glsl  learnopenglVertexShader.glsl
test/glsl/learnopengl/: frag.glsl  vert.glsl
